1.8.2 Easypay opc support, popup widget
1.8.5 Fixed bugs frontend:
	1. Continue logic opc
	2. Closing popup
1.8.6 - realese ok
1.8.7 - PSR-2 check
2.0.0rc2 - update notifications, add branches tab, add update branch button,
2.0.1 - also delegate change events to future widget elements
2.0.2 - SOAP extension check
      - if only 1 country is used for a carrier - preselect the given country
      - hide "Packetery API key is not set" notice
      - fixed bug with round cod with different currencies
      - translation module description in module list
      - translation in Orders tab, the text above the checkbox for selecting all orders
      - translation in Settings tab, remove buttons in table for creating delivery option
      - translation in Settings tab, all the options in label format selectbox
      - translation in widget, the default option in selectBox with branches ("-- please choose --")
      - Slovak module translation
      - documentation en, sk, cz
2.0.3 - "One page checkout prestashop" module support, mini fixes, clear code.
2.0.3rc2 - fix on install with debug_mode on
2.1.0 - Widget for selecting branches added
2.1.1 - Bugfixes
2.1.2 - Bugfixes & Code revision
2.1.3 - Customer Name & Surname taken from delivery address instead of the customer themself
2.1.4 - Fixed: Import branches from the feed - changed timeout from default 5 to 30 secs, and try fopen fallback if cUrl fails
	  - Fixed: Display an error message if SOAP is disabled
	  - Deleted unused files and code
	  - Refactored front.js
	  - Added: Generic support framework for third-party OPC modules
	  - Fixed: getListPayments() - compatibility with PS 1.7.7
2.1.5 - Fixed: Unpairing of carriers from address delivery via module.
      - Fixed: Keep pairing of updated carriers with the module
      - Updated: Transport administration - removal of adding carriers on the module side, solved similarly to
        address delivery by pairing existing carriers with the module.