@@ -26,13 +26,6 @@ All settings are saved automatically whenever you leave the edited data. If you 
 on the Packeta site, it is possible to request a test account at the Customer Service email [info@zasilkovna.cz](mailto:info@zasilkovna.cz):
 - **API key** – you can find your key in the client section of Packeta in the *Client support* tab
 - **Sender name** - the sender name you have set in the client section of the senders list
-- **Force country** - select the countries that will be offered in the e-shop cart when selecting a Packeta pickup
-  point, press Ctrl + left mouse button to select the desired country. You can select multiple countries at the same
-  time. In the same way, you will remove the country. If no country is selected, all supported countries will
-  be offered automatically.
-- **Force language** - The language of the *pickup point selection* widget is set according to the currently
-  selected eshop language version. If you set a forced language, this language is always set in the widget, regardless
-  of the language version of the eshop.
 
 ### Carrier settings
 - To add a carrier enter the menu *Shipping* - *Carriers*.
@@ -125,11 +118,6 @@ V případě, že nemáte uživatelský účet na stránkách Zásilkovny, je mo
 
 - **Klíč API**  - váš klíč API naleznete v [klientské sekci Zásilkovny](https://client.packeta.com/cs/support/) v části **Klientská podpora**
 - **Označení odesílatele** - označení odesílatele které máte nastaveno v [klientské sekci](https://client.packeta.com/cs/senders/) v seznamu odesílatelů
-- **Vynutit zemi** - vyberte země, které se budou nabízet v košíku eshopu při výběru výdejního místa Zásilkovny. Výběr provedete tak, že stisknete
-  klávesu *Ctrl* + levým tlačítkem myši vyberete požadovanou zemi.  Můžete vybrat více zemí zároveň.  Stejným způsobem zemi odeberete. Jestliže
-  nevyberete žádnou zemi, budou se nabízet automaticky všechny podporované země.
-- **Vynutit jazyk** - Jazyk widgetu pro výběr výdejních míst se nastavuje podle aktuálně zvolené jazykové mutace eshopu.  Pokud nastavíte vynucený jazyk,  
-  nastaví se tento jazyk ve widgetu vždy, bez ohledu na nastavenou jazykovou mutaci eshopu.
 
 ### Nastavení dopravců
 - Dopravce vytvoříte v menu *Doručení* - *Dopravci*.
