@@ -70,9 +70,7 @@ $sql[] = 'INSERT INTO `'._DB_PREFIX_."packetery_settings` (`id`, `option`, `valu
 			(1, 'APIPASS', ''),
 			(2, 'ESHOP_ID', ''),
             (3, 'LABEL_FORMAT', 'A7 on A4'),
-            (4, 'LAST_BRANCHES_UPDATE', ''),
-            (6, 'FORCE_COUNTRY', ''),
-            (7, 'FORCE_LANGUAGE', '')";
+            (4, 'LAST_BRANCHES_UPDATE', '');";
 
 $sql[] = 'DROP TABLE IF EXISTS `'._DB_PREFIX_.'packetery_branch`';
 $sql[] = 'CREATE TABLE `'._DB_PREFIX_.'packetery_branch` (
