@@ -34,3 +34,4 @@
       - Fixed: Keep pairing of updated carriers with the module
       - Updated: Transport administration - removal of adding carriers on the module side, solved similarly to
         address delivery by pairing existing carriers with the module.
+      - Removed: country and language forcing
